css/custom.css
/* ... */
.loading-container:hover .loading,
.loading-container .loading {
	transition: all 0.5s ease-in-out;
}

#loading-icon {
	position: absolute;
	top: 50%;
	left: 50%;
	max-width: 66px;
	transform: translate(-50%, -50%);
}

@keyframes rotate-loading {
	0% {
		transform: rotate(0deg);
	}

	100% {
		transform: rotate(360deg);
	}
}

.section-row {
	margin-bottom: 60px;
}

.section-row .section-title {
	text-align: center;
	margin-bottom: 0;
}

.section-btn {
	text-align: end;
}

.section-title {
	margin-bottom: 40px;
}

.section-title h3 {
	display: inline-block;
	position: relative;
	font-size: 14px;
	font-weight: 500;
	line-height: 1.5em;
	letter-spacing: 0.2em;
	text-transform: uppercase;
	color: var(--accent-color);
	padding-left: 20px;
	margin-bottom: 10px;
}

.section-title h3::before {
	content: '';
	position: absolute;
	top: 50%;
	left: 0;
	transform: translateY(-50%);
	background: url("../images/icon-sub-heading.svg") no-repeat;
	background-position: left center;
	background-size: cover;
	width: 12px;
	height: 12px;
}

.section-title h1 {
	font-size: 54px;
	font-weight: 700;
	margin-bottom: 0;
}

.section-title h2 {
	font-size: 44px;
	font-weight: 700;
	margin-bottom: 0;
}

.section-title h1 span,
.section-title h2 span {
	color: var(--accent-color);
}

.section-title p {
	margin-top: 20px;
	margin-bottom: 0;
}

.help-block.with-errors ul {
	margin: 0;
	text-align: left;
}

.help-block.with-errors ul li {
	color: var(--error-color);
	font-weight: 500;
	font-size: 14px;
}

/************************************/
/**** 	   03. Header css		 ****/
/************************************/

header.main-header {
	background-color: var(--secondary-color);
	border-bottom: 1px solid var(--dark-divider-color);
	position: relative;
	z-index: 100;
}

header.main-header .header-sticky {
	position: relative;
	top: 0;
	z-index: 100;
}

header.main-header .header-sticky.hide {
	transform: translateY(-100%);
	transition: transform 0.3s ease-in-out;
	border-radius: 0;
}

header.main-header .header-sticky.active {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	border-radius: 0;
	transform: translateY(0);
	background: var(--secondary-color);
	border-bottom: 1px solid var(--dark-divider-color);
	backdrop-filter: blur(30px);
}

.navbar {
	height: 110px;
}

/*.navbar-brand{
	height: 100%;
  object-fit: contain;
}

.navbar-brand img{
	height: auto;
	max-height: 58px;
	width: auto;
	max-width: 260px;
}*/

.navbar-brand {
	padding-left: 0;
	margin-left: 0;
	margin-right: 1.25rem;
}

.navbar-brand img {
	height: 82px;
	max-height: 82px;
	width: auto;
	max-width: 100%;
	object-fit: contain;
	transition: all 0.3s ease;
}

@media only screen and (max-width: 991px) {
	.navbar {
		height: 80px;
	}
	.navbar-brand {
		margin-left: 0;
		margin-right: 0;
		max-width: calc(100% - 56px);
	}
	.navbar-brand img {
		height: 60px;
		max-height: 60px;
		max-width: 100%;
	}
}

@media only screen and (max-width: 767px) {
	.navbar {
		height: 70px;
	}
	.navbar-brand img {
		height: 46px;
		max-height: 46px;
	}
}

.navbar>.container,
.navbar>.container-fluid {
	padding-left: 0;
	/* truly edge-flush */
}





.main-menu .nav-menu-wrapper {
	flex: 1;
	text-align: center;
}

.main-menu .nav-menu-wrapper>ul {
	align-items: center;
	display: inline-flex;
}

.main-menu ul li {
	margin: 0 9px;
	position: relative;
}

.main-menu ul li a {
	font-size: 16px;
	font-weight: 500;
	padding: 14px 15px !important;
	color: var(--primary-color);
	text-transform: capitalize;
	transition: all 0.3s ease-in-out;
}

.main-menu ul li.submenu>a:after {
	content: '\f107';
	font-family: 'FontAwesome';
	font-weight: 900;
	font-size: 14px;
	margin-left: 8px;
}

.main-menu ul li a:hover,
.main-menu ul li a:focus {
	color: var(--accent-color);
}

.main-menu ul ul {
	visibility: hidden;
	opacity: 0;
	transform: scaleY(0.8);
	transform-origin: top;
	padding: 0;
	margin: 0;
	list-style: none;
	width: 220px;
	border-radius: 20px;
	position: absolute;
	left: 0;
	top: 100%;
	overflow: hidden;
	background-color: var(--primary-color);
	transition: all 0.3s ease-in-out;
	text-align: left;
}

.main-menu ul li.submenu:first-child ul {
	width: 250px;
}

.main-menu ul ul ul {
	left: 100%;
	top: 0;
	text-align: left;
}

.main-menu ul ul li {
	margin: 0;
	padding: 0;
}

.main-menu ul ul li a {
	color: var(--white-color);
	padding: 8px 20px !important;
	transition: all 0.3s ease-in-out;
}

.main-menu ul li:hover>ul {
	visibility: visible;
	opacity: 1;
	transform: scaleY(1);
	padding: 5px 0;
}

.main-menu ul ul li a:hover,
.main-menu ul ul li a:focus {
	color: var(--accent-color);
	background-color: transparent;
	padding: 8px 20px 8px 23px !important;
}

.main-menu ul li.highlighted-menu {
	display: none;
}

.responsive-menu,
.navbar-toggle {
	display: none;
}

.responsive-menu {
	top: 0;
	position: relative;
}

.slicknav_btn {
	background: var(--primary-color);
	padding: 0;
	display: flex;
	align-items: center;
	justify-content: center;
	width: 38px;
	height: 38px;
	margin: 0;
	border-radius: 8px;
}

.slicknav_icon .slicknav_icon-bar {
	display: block;
	width: 100%;
	height: 3px;
	width: 22px;
	background-color: var(--white-color);
	border-radius: 6px;
	margin: 4px auto !important;
	transition: all 0.1s ease-in-out;
}

.slicknav_icon .slicknav_icon-bar:first-child {
	margin-top: 0 !important;
}

.slicknav_icon .slicknav_icon-bar:last-child {
	margin-bottom: 0 !important;
}

.navbar-toggle a.slicknav_btn.slicknav_open .slicknav_icon span.slicknav_icon-bar:nth-child(1) {
	transform: rotate(-45deg) translate(-5px, 5px);
}

.navbar-toggle a.slicknav_btn.slicknav_open .slicknav_icon span.slicknav_icon-bar:nth-child(2) {
	opacity: 0;
}

.navbar-toggle a.slicknav_btn.slicknav_open .slicknav_icon span.slicknav_icon-bar:nth-child(3) {
	transform: rotate(45deg) translate(-5px, -5px);
}

.slicknav_menu {
	position: absolute;
	width: 100%;
	padding: 0;
	background: var(--primary-color);
}

.slicknav_menu ul {
	margin: 5px 0;
}

.slicknav_menu ul ul {
	margin: 0;
}
/* ... */

